Add docstrings to functions

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,6 +15,15 @@
    ],
    "source": [
     "def fourth_place(ls:list): # Can't hint for output type since a list entry could be of any type.\n",
+    "  \"\"\" Returns fourth item in the list.\n",
+    "\n",
+    "  Args: \n",
+    "    ls (list): list of objects of any type\n",
+    "\n",
+    "  Returns: \n",
+    "    ls[3] (undetermined): fourth item in the list \n",
+    "    \n",
+    "  \"\"\"\n",
     "  try:\n",
     "    return ls[3]\n",
     "  except IndexError as E:\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +41,7 @@
        "-2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -59,11 +68,27 @@
    "source": [
     "class Shoe:\n",
     "  def __init__(self, US_size:int, color:str, smelly:bool) -> None:\n",
+    "    \"\"\" Initializes an instance of the Shoe class (called with 'Shoe()')\n",
+    "    \n",
+    "    Args:\n",
+    "      US_size (int): The size of the shoe in US measurement\n",
+    "      color (str): The color of the shoe\n",
+    "      smelly (bool): Whether the shoe is smelly\n",
+    "\n",
+    "    Returns: None\n",
+    "    \n",
+    "    \"\"\"\n",
     "    self.US_size = US_size\n",
     "\n",
     "  def euro_size(self) -> None:\n",
     "    # The question prompt says this function needs to \"convert US_size to European size.\" Does that mean it needs to *replace* the prior US_size value?\n",
-    "    # I wasn't sure, so I just added another attribute called \"Euro_size\".\n",
+    "    # I wasn't sure, so I just added another attribute called \"Euro_size\". I'm not sure this counts as \"converting\" US_size. \n",
+    "    \"\"\" Converts US_size attribute to European sizing by adding 33, and prints a string stating the European size\n",
+    "\n",
+    "    Args: None\n",
+    "    Returns: None\n",
+    "    \n",
+    "    \"\"\"\n",
     "    self.Euro_size = self.US_size + 33\n",
     "    print(f\"Euro Size: {self.Euro_size}\")\n",
     "\n",
@@ -76,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -90,37 +115,40 @@
       "\tcomets,\n",
       "\tcosmic rays,\n",
       "and more! As for planets, you can find millions of them! Here's 3 of them:\n",
-      "\tOrange Jupiter,\n",
-      "\tYellow Saturn,\n",
-      "\tBlue Neptune,\n",
-      "...And, uh, the unforgettable Pluto! So that's 4, actually. Right.\n"
+      "\t'Orange Jupiter',\n",
+      "\t'Yellow Saturn',\n",
+      "\t'Blue Neptune',\n",
+      "...and, uh, 'Unforgettable Pluto'! So that's 4, actually. Right.\n"
      ]
     }
    ],
    "source": [
-    "def galaxy(name: str, *non_planets: str, pluto_is_planet = False, **planets: str) -> None: # name, *non_planets, pluto_is_planet = False, **planets\n",
+    "def galaxy(name: str, *non_planets: str, pluto_is_planet = False, **planets: str) -> None: \n",
+    "  \"\"\" Prints a paragraph of space facts about the entered galaxy.\n",
+    "\n",
+    "  Args: \n",
+    "    name (str): Name of a galaxy\n",
+    "    *non_planets (str): Types of non-planetary objects (given as plural nouns)\n",
+    "    pluto_is_planet (bool): Whether there's a planet called 'Pluto' in the current galaxy\n",
+    "    **planets (str): Names of planets and their colors\n",
+    "\n",
+    "  Returns: None\n",
+    "\n",
+    "  \"\"\"\n",
     "  print(f\"Welcome to the {name.title()} Galaxy!\\nHere we have a delightful variety of non-planetary and planetary objects.\")\n",
     "  print(\"On the part of the non-planets, we have:\")\n",
     "  for object in non_planets:\n",
     "    print(f\"\\t{object},\")\n",
     "  print(f\"and more! As for planets, you can find millions of them! Here's {len(planets)} of them:\")\n",
     "  for planet, color in planets.items(): \n",
-    "    print(f\"\\t{color.capitalize()} {planet},\")\n",
+    "    print(f\"\\t'{color.capitalize()} {planet}',\")\n",
     "  if pluto_is_planet:\n",
-    "    print(f\"...And, uh, the unforgettable Pluto! So that's {len(planets) + 1}, actually. Right.\")\n",
+    "    print(f\"...and, uh, 'Unforgettable Pluto'! So that's {len(planets) + 1}, actually. Right.\")\n",
     "  else:\n",
-    "    print(\"But unfortunately not Pluto.\")\n",
-    "\n",
+    "    print(\"but unfortunately not Pluto.\")\n",
     "\n",
     "galaxy(\"milky way\", \"asteroid belts\", \"comets\",\"cosmic rays\", pluto_is_planet=True, Jupiter = \"orange\", Saturn = \"yellow\", Neptune = \"blue\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
